--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ nav {
 	top: 0;	
 	left: 0;
 	right: 0;	
-	background-color: #222;			
+	background-color: rgba(13, 13, 13, 0.9);			
 	transition: .3s;
 	z-index: 2;
 }
@@ -84,7 +84,10 @@ nav ul li .btn-4:hover{
 	}
 	nav ul li:first-child a {	
 		margin: 0;
-}
+	}
+	nav ul li.logo {
+		flex-grow: 0;
+}	
 	.minilogo {
 		display: block;
 		position: relative;
@@ -179,17 +182,18 @@ nav ul li .btn-4:hover{
 	position: relative;
 	/*max-width: 1280px;*/
 	margin: 80px auto 0;
-	height: calc(100vh - 80px);
+	height: 100vh;
 	width: 100%;
 	background-image: url(../images/lavender1.jpg);
 	background-repeat: no-repeat;
 	background-size: cover; 
 	background-position: center;	
+	background-attachment: fixed;
 	text-align: center; 
 }
 .welcome-wrap {
 	position: absolute;
-	height: calc(100vh - 80px);
+	height: 100vh;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 }
@@ -216,37 +220,6 @@ nav ul li .btn-4:hover{
 	color: #bfbff2;
 	text-transform: uppercase;	
 }
-.welcome button.arrow-down {
-	position: absolute;
-	bottom: 4%;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 40px;
-	height: 40px;
-	line-height: 40px;	
-	border-radius: 50%;
-	border-style: none;
-	font-size: 40px;
-	color: #fff;
-	background-color: rgba(0, 0, 0, 0.5);
-	cursor: pointer;
-	overflow: hidden;
-	transition: .3s;
-}
-.welcome button.arrow-down:hover {
-	background-color: rgba(0, 0, 0, 0.7);
-}
-.welcome button.arrow-down:hover i {	
-	animation: arrow 1s linear infinite both;
-}
-@keyframes arrow {
-	0% {
-		transform: translateY(-50%);
-	}
-	100% {
-		transform: translateY(50%);
-	}
-}
 @media(max-width: 1024px) {
 	.welcome {
 		margin-top: 0;
@@ -269,9 +242,6 @@ nav ul li .btn-4:hover{
 	.welcome p {
 		font-size: 26px;
 	}
-	.welcome button.arrow-down:hover i {	
-		animation: none;
-	}
 }
 @media(max-width: 825px) and (orientation: landscape) {
 	.welcome h1 {
@@ -288,13 +258,6 @@ nav ul li .btn-4:hover{
 	.welcome p {
 		font-size: 20px;
 	}
-	.welcome button.arrow-down {
-		bottom: 5%;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;	
-		font-size: 40px;
-	}
 }
 @media(max-width: 540px) and (orientation: landscape) {
 	.welcome h1 {
@@ -308,13 +271,6 @@ nav ul li .btn-4:hover{
 	}
 	.welcome p {
 		font-size: 18px;
-	}
-	.welcome button.arrow-down {
-		bottom: 5%;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;	
-		font-size: 40px;
 	}
 }
 @media(max-width: 420px) and (orientation: portrait) {
@@ -334,13 +290,6 @@ nav ul li .btn-4:hover{
 	.welcome p {
 		margin-top: 50px;
 		font-size: 20px;
-	}
-	.welcome button.arrow-down {
-		bottom: 5%;
-		width: 40px;
-		height: 40px;
-		line-height: 40px;	
-		font-size: 40px;
 	}
 }
 /*about us*/
@@ -437,7 +386,7 @@ nav ul li .btn-4:hover{
 	/*max-width: 1280px;*/
 	/*margin: 0 auto;*/
 	width: 100%;
-	height: calc(100vh - 80px);
+	height: 100vh;
 	overflow: hidden;		
 }
 .banner-image img {	
@@ -818,7 +767,7 @@ div.arrow {
 
 
 footer {
-	background-color: #222;	
+	background-color: rgba(13, 13, 13, 0.9);	
 	text-align: center;
 }
 footer p {
