--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -77,6 +77,9 @@ nav ul li .btn-3:hover {
   color: #7449ff;
 }
 nav ul li .btn-4:hover{
+  color: #5127e5;
+}	
+nav ul li .btn-5:hover{
   color: #421eb2;
 }	
 .minilogo {
@@ -260,7 +263,7 @@ nav ul li .btn-4:hover{
 		height: 100vh;
 	}
 	.welcome h1 {
-		/*margin-top: 50px;*/
+		margin-top: 100px;
 		font-size: 60px;
 	}
 	.welcome h1~h1 {
@@ -680,7 +683,8 @@ div.arrow {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
-	height: 80vh;	
+	height: -webkit-calc(100vh - 64px);
+	height: calc(100vh - 64px);	
 	color: #fff;
 }
 .contact .information {
@@ -721,7 +725,8 @@ div.arrow {
 	    -webkit-flex-grow: 1;
 	        flex-grow: 1;
 	width: 100%;
-	height: 80vh;
+	height: -webkit-calc(100vh - 64px);
+	height: calc(100vh - 64px);
 	padding: 0 30px;
 	background-color: rgba(0, 0, 0, 0.8);
 }
@@ -779,7 +784,8 @@ div.arrow {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 80vh;
+	height: -webkit-calc(100vh - 64px);
+	height: calc(100vh - 64px);
 }
 @media (max-width: 1024px) {
 	.contact .information .wrap {
@@ -869,16 +875,16 @@ div.arrow {
 }
 @media (max-width: 768px) and (orientation: portrait) {
 	.contact .information h1 {
-		font-size: 30px;
+		font-size: 26px;
 	}
 	.contact .information .info .contact-icon {
 		font-size: 40px;
 	}
 	.contact .information .info .text {
-		font-size: 20px;	
+		font-size: 14px;	
 	}
 	.contact .information .info .text p.title {
-		font-size: 24px;
+		font-size: 16px;
 	}
 }
 @media (max-width: 425px) and (orientation: portrait) {
