--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -88,14 +88,14 @@ nav ul li .btn-5:hover{
 @media(max-width: 1024px) {
 	nav {	
 		position: fixed;
-		opacity: 0;
+		top: -100vh;
 		-webkit-transition: .3s;
 		transition: .3s;
 	}
 	nav ul {		
-	  -ms-flex-pack: center;		
-	      -webkit-box-pack: center;		
-	      -webkit-justify-content: center;		
+	  -webkit-box-pack: center;		
+	  -webkit-justify-content: center;		
+	      -ms-flex-pack: center;		
 	          justify-content: center;
 	}
 	nav ul li:first-child a {	
@@ -170,7 +170,7 @@ nav ul li .btn-5:hover{
 		        transform: rotate(-90deg);
 	}
 	nav.active {
-		opacity: 1;
+		top: 0;
 	}
 }
 @media(max-width: 870px) {
@@ -180,10 +180,6 @@ nav ul li .btn-5:hover{
 	}
 	.burger span {
 	 	height: 6px;
-	}
-	nav {		
-	 	opacity: 0;	
-	 	height: 100vh;
 	}
 	nav ul {
 		-ms-flex-direction: column;
@@ -207,14 +203,10 @@ nav ul li .btn-5:hover{
 		padding: 12px;
 		font-size: 18px;	  			  	
 	}
-	nav {		
-	 	opacity: 0;	
-	}
 }
 /*header*/
 .welcome {
 	position: relative;
-	/*max-width: 1280px;*/
 	margin: 80px auto 0;
 	height: 100vh;
 	width: 100%;
@@ -428,8 +420,6 @@ nav ul li .btn-5:hover{
 /*banner*/
 .banner {	 
 	position: relative;
-	/*max-width: 1280px;*/
-	/*margin: 0 auto;*/
 	width: 100%;
 	height: 100vh;
 	overflow: hidden;		
@@ -633,17 +623,17 @@ div.arrow {
 	text-transform: uppercase;
 }
 .gallery .album {
-	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-wrap: wrap;
-	    -webkit-flex-wrap: wrap;
-	        flex-wrap: wrap;
-	-ms-flex-pack: center;
-	    -webkit-box-pack: center;
-	    -webkit-justify-content: center;
-	        justify-content: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .gallery .album a img {
 	margin: 30px 15px 5px;
@@ -677,11 +667,9 @@ div.arrow {
 }
 /*contact*/
 .contact {
-	/*max-width: 1280px;*/
-	margin: 0 auto;
-	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 	height: -webkit-calc(100vh - 64px);
 	height: calc(100vh - 64px);	
@@ -691,18 +679,18 @@ div.arrow {
 	position: relative;
 	top: 0;
 	left: 0;
-	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-direction: column;
-	    -webkit-box-orient: vertical;
-	    -webkit-box-direction: normal;
-	    -webkit-flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	    -ms-flex-direction: column;
 	        flex-direction: column;
-	-ms-flex-positive: 1;
-	    -webkit-box-flex: 1;
-	    -webkit-flex-grow: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
 	        flex-grow: 1;
 	background-image: url(../images/4.jpg);
 	background-repeat: no-repeat;	
@@ -715,14 +703,14 @@ div.arrow {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
-	-ms-flex-direction: column;
-	    -webkit-box-orient: vertical;
-	    -webkit-box-direction: normal;
-	    -webkit-flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-webkit-flex-direction: column;
+	    -ms-flex-direction: column;
 	        flex-direction: column;
-	-ms-flex-positive: 1;
-	    -webkit-box-flex: 1;
-	    -webkit-flex-grow: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
 	        flex-grow: 1;
 	width: 100%;
 	height: -webkit-calc(100vh - 64px);
@@ -739,28 +727,28 @@ div.arrow {
 	letter-spacing: 2px;
 }
 .contact .information .info {
-	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	-ms-flex-positive: 1;
-	    -webkit-box-flex: 1;
-	    -webkit-flex-grow: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
 	        flex-grow: 1;
 	padding: 10px;
 }
 .contact .information .info .contact-icon {
-	-ms-flex-preferred-size: 20%;
-	    -webkit-flex-basis: 20%;
+	-webkit-flex-basis: 20%;
+	    -ms-flex-preferred-size: 20%;
 	        flex-basis: 20%;
 	text-align: center;
 	font-size: 30px;
 	color: #9595ea;
 }
 .contact .information .info .text {
-	-ms-flex-positive: 1;
-	    -webkit-box-flex: 1;
-	    -webkit-flex-grow: 1;
+	-webkit-box-flex: 1;
+	-webkit-flex-grow: 1;
+	    -ms-flex-positive: 1;
 	        flex-grow: 1;
 	font-size: 16px;	
 }
@@ -771,8 +759,8 @@ div.arrow {
 	letter-spacing: 2px;
 }
 .contact .map {
-	-ms-flex-preferred-size: 60%;
-	    -webkit-flex-basis: 60%;
+	-webkit-flex-basis: 60%;
+	    -ms-flex-preferred-size: 60%;
 	        flex-basis: 60%;
 	background-color: #555;	
 	position: relative;
@@ -806,33 +794,36 @@ div.arrow {
 }
 @media (max-width: 870px) {
 	.contact {
-		-ms-flex-direction: column;
-		    -webkit-box-orient: vertical;
-		    -webkit-box-direction: normal;
-		    -webkit-flex-direction: column;
-		        flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
 		height: 100vh;
 	}
 	.contact .information .info {
-		display: -ms-flexbox;
 		display: -webkit-box;
 		display: -webkit-flex;
+		display: -ms-flexbox;
 		display: flex;
-		-ms-flex-direction: column;
-		    -webkit-box-orient: vertical;
-		    -webkit-box-direction: normal;
-		    -webkit-flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: column;
+		    -ms-flex-direction: column;
 		        flex-direction: column;
-		-ms-flex-align: center;
-		    -webkit-box-align: center;
-		    -webkit-align-items: center;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		    -ms-flex-align: center;
 		        align-items: center;
 		text-align: center;
 	}
 	.contact .map {
-		-ms-flex-preferred-size: 30%;
-		    -webkit-flex-basis: 30%;
-		        flex-basis: 30%;
+    -webkit-flex-basis: 30%;
+        -ms-flex-preferred-size: 30%;
+            flex-basis: 30%;
+	}
+	.contact .map div#map {
+		height: 30vh;
 	}
 }
 @media (max-width: 870px) and (orientation: landscape){
@@ -840,9 +831,12 @@ div.arrow {
 		height: 200vh;
 	}
 	.contact .map {
-		-ms-flex-preferred-size: 50%;
-		    -webkit-flex-basis: 50%;
-		        flex-basis: 50%;
+	  -webkit-flex-basis: 50%;
+	      -ms-flex-preferred-size: 50%;
+	          flex-basis: 50%;
+	}
+	.contact .map div#map {
+		height: 100vh;
 	}
 	.contact .information .wrap {
 		height: 100vh;
@@ -892,9 +886,12 @@ div.arrow {
 		height: 150vh;
 	}
 	.contact .map {
-		-ms-flex-preferred-size: 50vh;
-		    -webkit-flex-basis: 50vh;
-		        flex-basis: 50vh;
+    -webkit-flex-basis: 50vh;
+        -ms-flex-preferred-size: 50vh;
+            flex-basis: 50vh;
+	}
+	.contact .map div#map {
+		height: 50vh;
 	}
 	.contact .information .wrap {
 		height: 100vh;
@@ -909,8 +906,6 @@ div.arrow {
 		font-size: 16px;	
 	}
 }
-
-
 footer {
 	background-color: rgba(13, 13, 13, 0.9);	
 	text-align: center;
