--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -412,6 +412,8 @@ nav ul li .btn-5:hover{
 		width: 200px;
 	}
 }
+
+
 /*banner*/
 .banner {	 
 	position: relative;
@@ -609,11 +611,12 @@ div.arrow {
 /*gallery*/
 .gallery {
 	max-width: 1280px;
-	margin: 60px auto;
+	margin: 0 auto 80px;
 }
 .gallery h1 {
 	text-align: center;
-	margin: 80px 0 20px;
+	padding: 80px 0 20px;
+	margin-bottom: 20px;
 	font-size: 28px;
 	text-transform: uppercase;
 }
@@ -723,7 +726,7 @@ div.arrow {
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 28px;
-	padding: 20px;
+	padding: 80px 20px 20px;
 	color: #9595ea;
 	letter-spacing: 2px;
 }
@@ -803,9 +806,9 @@ div.arrow {
 		height: 100vh;
 	}
 	.contact .information .info {
-		display: -ms-flexbox;
 		display: -webkit-box;
 		display: -webkit-flex;
+		display: -ms-flexbox;
 		display: flex;
 		-ms-flex-direction: column;
 		    -webkit-box-orient: vertical;
@@ -817,6 +820,9 @@ div.arrow {
 		    -webkit-align-items: center;
 		        align-items: center;
 		text-align: center;
+	}
+	.contact .information .wrap {
+		height: 70vh;
 	}
 	.contact .map {
     -ms-flex-preferred-size: 30%;
