--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,8 @@ nav ul li .btn-5:hover{
 		width: 200px;
 	}
 }
+
+
 /*banner*/
 .banner {	 
 	position: relative;
@@ -516,11 +518,12 @@ div.arrow {
 /*gallery*/
 .gallery {
 	max-width: 1280px;
-	margin: 60px auto;
+	margin: 0 auto 80px;
 }
 .gallery h1 {
 	text-align: center;
-	margin: 80px 0 20px;
+	padding: 80px 0 20px;
+	margin-bottom: 20px;
 	font-size: 28px;
 	text-transform: uppercase;
 }
@@ -603,7 +606,7 @@ div.arrow {
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 28px;
-	padding: 20px;
+	padding: 80px 20px 20px;
 	color: #9595ea;
 	letter-spacing: 2px;
 }
@@ -671,13 +674,15 @@ div.arrow {
 		height: 100vh;
 	}
 	.contact .information .info {
-		display: -ms-flexbox;
 		display: flex;
 		-ms-flex-direction: column;
 		    flex-direction: column;
 		-ms-flex-align: center;
 		    align-items: center;
 		text-align: center;
+	}
+	.contact .information .wrap {
+		height: 70vh;
 	}
 	.contact .map {
     -ms-flex-preferred-size: 30%;
